# mtga_resources_locator

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: rust.yaml  test-macos.yaml  test-windows.yaml  tests.yaml
src/: lib.rs
src/path_locator/: macos.rs  windows.rs
